Made UI fixes, added panels, fixed styles so most of the colours have an acceptable ratio of contrast Made semantic html and aria fixes for screen readers Changed updates to only give relevant info Organized styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,6 +27,10 @@
     --tile-empty: #8B4513;
     --tile-watered: #386641;
     --tile-planted: #6a994e;
+
+    /* Font */
+    --instruction-font-size: 1rem;
+    --button-font-size: 0.8rem;
 }
 
 body {
@@ -49,7 +53,7 @@ code {
 /*Blockly*/
 #blocklyDiv {
   flex-basis: 100%;
-  height: 100%;
+  height: 90%;
   min-width: 600px;
 }
 
@@ -59,7 +63,8 @@ code {
   width: 400px;
   flex: 0 0 400px;
   overflow: auto;
-  margin: 1rem;
+  padding: 1rem;
+  margin: 0;
 }
 
 #generatedCode {
@@ -97,6 +102,7 @@ body {
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 .App-header {
@@ -137,10 +143,11 @@ body {
     background-color: #184e77;
     color: white;
     padding: 8px 12px;
-    border-radius: 4px;
+    border-radius: 50px;
     cursor: pointer;
+    box-shadow: 0 6px 14px rgba(0, 0, 0, 0.6), inset 0 1px 0 rgba(255, 255, 255, 0.2);
     font-weight: bold;
-    font-size: 0.77rem;
+    font-size: var(--button-font-size);
     transition: background-color 0.3s;
 }
 
@@ -197,7 +204,7 @@ body {
 .game-container {
     height: 90%;
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     overflow-y: auto;
     background-color: #333;
     color: #fff;
@@ -214,12 +221,12 @@ body {
     background-color: #2b68c5;
 }
 
-.game-panel .run-mode-button-all {
-    background-color: #333333 !important;
+button.run-mode-button-all {
+    background-color: #d6611a;
 }
 
-.game-panel .run-mode-button-day {
-    background-color: #222222 !important;
+button.run-mode-button-day {
+    background-color: #3c9c18;
 }
 
 .grid-container {
@@ -236,6 +243,7 @@ body {
     place-items: center;
     border: 2px solid #888;
     padding: 10px;
+    padding-bottom: 20px;
     border-radius: 8px;
     margin: 0 auto;
     gap: 4px;
@@ -299,7 +307,7 @@ body {
 /* Blockly Panel */
 .blockly-panel {
     width: 100%;
-    height: 100%;
+    height: 83%;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -310,27 +318,19 @@ body {
     stroke: none;
 }
 
-#blocklyDiv {
-    width: 100%;
-    height: 90%;
-}
 
-.run-code-button {
+button.run-code-button {
     tab-index: 0 !important;
     margin-left: auto;
-    background-color: #2196F3 !important;
-    color: white;
-    padding: 8px 12px;
-    border-radius: 4px;
+    background-color: #7e3000;
+    padding: 8px 30px;
     position: absolute;
     bottom: 10%;
     right: 30%;
-    transition: background-color 0.3s;
-    cursor: pointer;
 }
 
 .run-code-button:hover {
-    background-color: #2b68c5;
+    background-color: #bf4a02;
 }
 
 .run-code-button:disabled {
@@ -355,8 +355,9 @@ body {
 
 #version-footer {
     position: absolute;
-    bottom: 6px;
-    right: 10px;
+    bottom: 15px;
+    right: 5px;
+    left: 5px;
     font-size: 11px;
     opacity: 0.6;
     color: #fff; /* or match your theme */
